Fill NaNs in Latitude and Longitude columns with values manually looked up from Google Maps

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -81,7 +81,7 @@
      "output_type": "stream",
      "text": [
       "The scpd dataframe currently has this shape: (294, 49)\n",
-      "The scpd dataframe now has this shape: (294, 25)\n"
+      "The scpd dataframe now has this shape: (294, 27)\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
     "                    'Community Board', 'Council D istrict', 'Sunday', 'Monday', 'Tuesday',\n",
     "                     'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Fiscal Year Amount',\n",
     "                     'FY 20 Actual Meals', 'Meal Prep', 'Meals Prep for Others', 'Borough',\n",
-    "                     'Latitude', 'Longitude', 'Census Tract', 'BIN', 'BBL', 'NTA'], inplace = True)\n",
+    "                     'Census Tract', 'BIN', 'BBL', 'NTA'], inplace = True)\n",
     "\n",
     "print(f'The scpd dataframe now has this shape: {scpd.shape}')"
    ]
@@ -117,7 +117,8 @@
       "       'Kosher Meal Budget', 'Non-Kosher Meal Budget', 'Total Meal Budget',\n",
       "       'Average Meal Expenditure Per Client', 'Meal Prep Type',\n",
       "       'Meal Prep For Other Centers', 'Total AIB-SCE-HPP Expenditures',\n",
-      "       'Average AIB-SCE-HPP Expenditures Per Client', 'Percent Utilization'],\n",
+      "       'Average AIB-SCE-HPP Expenditures Per Client', 'Percent Utilization',\n",
+      "       'Latitude', 'Longitude'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -162,6 +163,8 @@
        "Meal Prep Type                                  27\n",
        "Meal Prep For Other Centers                     27\n",
        "Average AIB-SCE-HPP Expenditures Per Client    120\n",
+       "Latitude                                        11\n",
+       "Longitude                                       11\n",
        "dtype: int64"
       ]
      },
@@ -707,7 +710,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The scpd dataframe now has this shape: (294, 22)\n"
+      "The scpd dataframe now has this shape: (294, 24)\n"
      ]
     }
    ],
@@ -728,6 +731,200 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "3974516b-5a71-4659-97eb-b1f8e527928c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Provider Name</th>\n",
+       "      <th>Program Address</th>\n",
+       "      <th>Program Address1</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>ARROCHAR NEIGHBORHOOD SENIOR CENTER</td>\n",
+       "      <td>44 BIONA AVENUE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>MORRISANIA AIR RIGHTS SOCIAL CLUB</td>\n",
+       "      <td>3135 PARK AVENUE EAST</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>RAIN MT CARMEL NEIGHBORHOOD SENIOR CTR</td>\n",
+       "      <td>2405 SOUTHERN BOLULEVARD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>HUGH GILROY NEIGHBORHOOD SENIOR CENTER</td>\n",
+       "      <td>447 KINGSBOROUGH</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>HOMECREST BENSONHURST NEIGHBORHOOD SENIOR CENTER</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>CCNS ST CHARLES NEIGHBORHOOD SENIOR CENT</td>\n",
+       "      <td>55 PIERREPORT STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>POLO GROUNDS</td>\n",
+       "      <td>2965 FREDERICK DOUGLASS BOULEVARD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>JEFFERSON HOUSES NSC</td>\n",
+       "      <td>2205 FIST AVENUE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>FOOD BANK NEIGHBORHOOD SENIOR CENTER</td>\n",
+       "      <td>WEST 116TH STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>HANAC RAVENSWOOD NSC</td>\n",
+       "      <td>34-35A 12TH STREET</td>\n",
+       "      <td>12TH STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>273</th>\n",
+       "      <td>HOLLISWOOD NEIGHBORHOOD SENIOR CENTER</td>\n",
+       "      <td>86-25 FRANCES LEWIS BLVD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Provider Name  \\\n",
+       "102               ARROCHAR NEIGHBORHOOD SENIOR CENTER   \n",
+       "126                 MORRISANIA AIR RIGHTS SOCIAL CLUB   \n",
+       "139            RAIN MT CARMEL NEIGHBORHOOD SENIOR CTR   \n",
+       "169            HUGH GILROY NEIGHBORHOOD SENIOR CENTER   \n",
+       "179  HOMECREST BENSONHURST NEIGHBORHOOD SENIOR CENTER   \n",
+       "192          CCNS ST CHARLES NEIGHBORHOOD SENIOR CENT   \n",
+       "214                                      POLO GROUNDS   \n",
+       "228                              JEFFERSON HOUSES NSC   \n",
+       "231              FOOD BANK NEIGHBORHOOD SENIOR CENTER   \n",
+       "260                              HANAC RAVENSWOOD NSC   \n",
+       "273             HOLLISWOOD NEIGHBORHOOD SENIOR CENTER   \n",
+       "\n",
+       "                       Program Address Program Address1  Latitude  Longitude  \n",
+       "102                    44 BIONA AVENUE              NaN       NaN        NaN  \n",
+       "126              3135 PARK AVENUE EAST              NaN       NaN        NaN  \n",
+       "139           2405 SOUTHERN BOLULEVARD              NaN       NaN        NaN  \n",
+       "169                   447 KINGSBOROUGH              NaN       NaN        NaN  \n",
+       "179                           BROOKLYN              NaN       NaN        NaN  \n",
+       "192               55 PIERREPORT STREET              NaN       NaN        NaN  \n",
+       "214  2965 FREDERICK DOUGLASS BOULEVARD              NaN       NaN        NaN  \n",
+       "228                   2205 FIST AVENUE              NaN       NaN        NaN  \n",
+       "231                  WEST 116TH STREET              NaN       NaN        NaN  \n",
+       "260                 34-35A 12TH STREET      12TH STREET       NaN        NaN  \n",
+       "273           86-25 FRANCES LEWIS BLVD              NaN       NaN        NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pull only the rows that have NaNs in 'Latitude' or 'Longitude', and get the Program address from the original raw dataframe\n",
+    "lat_long_nans = scpd_raw.loc[(scpd_raw['Latitude'].isna()) & (scpd_raw['Longitude'].isna()), ['Provider Name', 'Program Address', 'Program Address1', 'Latitude', 'Longitude']]\n",
+    "lat_long_nans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2c9b8ddb-61a8-47e8-80a5-44bb686dd0e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill NaNs in 'Latitude' and 'Longitude' with corresponding values in fill_dict\n",
+    "fill_cols = ['Latitude', 'Longitude']\n",
+    "fill_dict = {\n",
+    "    102: [40.596868706020445, -74.07555607642975],\n",
+    "    126: [40.82651347755042, -73.91661122662934],\n",
+    "    139: [40.85396935386981, -73.88190264660648],\n",
+    "    169: [40.67530765760249, -73.92446824134545],\n",
+    "    179: [40.602035938136076, -73.95715926297987],\n",
+    "    192: [40.696071010269755, -73.99506336199069],\n",
+    "    214: [40.830937975634, -73.93751073154422],\n",
+    "    228: [40.79462754058644, -73.93706847434424],\n",
+    "    231: [40.80412527380681, -73.95489674318942],\n",
+    "    260: [40.76252319677368, -73.93704370456038],\n",
+    "    273: [40.72522541418266, -73.76483607547621]\n",
+    "}\n",
+    "fill_df = pd.DataFrame(fill_dict.values(), index = fill_dict.keys(), columns = ['Latitude', 'Longitude'])\n",
+    "\n",
+    "for col in fill_cols:\n",
+    "    scpd.loc[scpd[col].isna(), col] = scpd.loc[scpd[col].isna(), col].fillna(fill_df[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "090adae9-4b2e-4b41-a8fa-e6878d23e6b8",
    "metadata": {},
    "outputs": [],
@@ -739,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "068de82d-5958-459c-9b4d-ea6df2aa84dc",
    "metadata": {},
    "outputs": [],
@@ -751,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "aa9f73b3-a747-48d2-b5cb-1de61572306c",
    "metadata": {},
    "outputs": [],
@@ -762,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "b99b518f-604c-4419-acba-71c1c4b4bb2d",
    "metadata": {},
    "outputs": [],
@@ -773,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f31b4bd9-649d-4aa5-a834-74d4882e44bb",
    "metadata": {},
    "outputs": [],
@@ -785,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "e17bbd5b-3feb-4a0d-81f3-613442e47003",
    "metadata": {},
    "outputs": [
@@ -797,7 +994,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,17 +1014,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "8a0922d7-f3b3-41ec-bc99-1604b7fdf917",
+   "execution_count": 18,
+   "id": "1533a44c-b4e5-4673-8702-915d9ef640ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['DFTA ID', 'Senior Center Name', 'Site Type', 'Borough',\n",
+       "       'Contract From Date', 'Contract To Date', 'Total FTEs', 'Total PTEs',\n",
+       "       'Months in HHS', 'Total Budget', 'Total Personnel Budget',\n",
+       "       'Total Expenses', 'Average Daily Clients', 'Kosher Meal Budget',\n",
+       "       'Non-Kosher Meal Budget', 'Total Meal Budget',\n",
+       "       'Average Meal Expenditure Per Client', 'Meal Prep Type',\n",
+       "       'Meal Prep For Other Centers', 'Total AIB-SCE-HPP Expenditures',\n",
+       "       'Average AIB-SCE-HPP Expenditures Per Client', 'Percent Utilization',\n",
+       "       'Latitude', 'Longitude'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "scpd['Total Employees'] = scpd['Total FTEs'] + scpd['Total PTEs']"
+    "scpd.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
+   "id": "8a0922d7-f3b3-41ec-bc99-1604b7fdf917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scpd['Total Employees'] = scpd['Total FTEs'] + scpd['Total PTEs']\n",
+    "scpd['PTE Status'] = scpd['Total PTEs'].apply(lambda num: 'Has No PTEs' if num == 0 else 'Has PTEs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "a016d652-5849-4bb0-959c-39580e481439",
    "metadata": {},
    "outputs": [
@@ -1134,6 +1362,34 @@
       "98%        1\n",
       "dtype: int64\n",
       "\n",
+      "Latitude\n",
+      "40.509084    2\n",
+      "40.731692    2\n",
+      "40.788212    2\n",
+      "40.821341    2\n",
+      "40.796935    2\n",
+      "            ..\n",
+      "40.691707    1\n",
+      "40.694725    1\n",
+      "40.694782    1\n",
+      "40.695105    1\n",
+      "40.905009    1\n",
+      "Length: 285, dtype: int64\n",
+      "\n",
+      "Longitude\n",
+      "-74.220930    2\n",
+      "-73.936317    2\n",
+      "-73.861061    2\n",
+      "-73.983223    2\n",
+      "-73.953577    2\n",
+      "             ..\n",
+      "-73.949762    1\n",
+      "-73.949217    1\n",
+      "-73.948775    1\n",
+      "-73.947866    1\n",
+      "-73.723122    1\n",
+      "Length: 285, dtype: int64\n",
+      "\n",
       "Total Employees\n",
       "8     39\n",
       "7     35\n",
@@ -1163,6 +1419,11 @@
       "22     1\n",
       "21     1\n",
       "31     1\n",
+      "dtype: int64\n",
+      "\n",
+      "PTE Status\n",
+      "Has PTEs       149\n",
+      "Has No PTEs    145\n",
       "dtype: int64\n",
       "\n"
      ]
