Add derived column named Client to Staff Ratio to data_cleaning.ipynb and senior_center_provider_data.py

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1256,6 +1256,7 @@
    "source": [
     "# Add five derived columns to scpd dataframe\n",
     "scpd['Total Employees'] = scpd['Total FTEs'] + scpd['Total PTEs']\n",
+    "scpd['Client to Staff Ratio'] = scpd['Average Daily Clients'] / scpd['Total Employees']\n",
     "scpd['PTE Status'] = scpd['Total PTEs'].apply(lambda num: 'Has No PTEs' if num == 0 else 'Has PTEs')\n",
     "scpd['% Budget Allocated for Personnel'] = scpd['Total Personnel Budget'] / scpd['Total Budget']\n",
     "scpd['% Budget Allocated for Meals'] = scpd['Total Meal Budget'] / scpd['Total Budget']\n",
@@ -1280,7 +1281,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cleaned scpd dataframe now has this shape: (294, 29)\n",
+      "The cleaned scpd dataframe now has this shape: (294, 30)\n",
       "\n",
       "The columns are now named:\n",
       "Index(['DFTA ID', 'Senior Center Name', 'Site Type', 'Borough',\n",
@@ -1291,8 +1292,9 @@
       "       'Average Meal Expenditure Per Client', 'Meal Prep Type',\n",
       "       'Meal Prep For Other Centers', 'Total AIB-SCE-HPP Expenditures',\n",
       "       'Average AIB-SCE-HPP Expenditures Per Client', 'Percent Utilization',\n",
-      "       'Latitude', 'Longitude', 'Total Employees', 'PTE Status',\n",
-      "       '% Budget Allocated for Personnel', '% Budget Allocated for Meals',\n",
+      "       'Latitude', 'Longitude', 'Total Employees', 'Client to Staff Ratio',\n",
+      "       'PTE Status', '% Budget Allocated for Personnel',\n",
+      "       '% Budget Allocated for Meals',\n",
       "       '% Budget Used for AIB, SCE, & HPP Services'],\n",
       "      dtype='object')\n"
      ]
