Clean Senior Center Client data in data_cleaning.ipynb and copy working code into senior_center_fy2020_data.py script (renamed from senior_center_provider_data.py

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1304,6 +1304,253 @@
     "print(f'The cleaned scpd dataframe now has this shape: {scpd.shape}\\n')\n",
     "print(f'The columns are now named:\\n{scpd.columns}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2ad2303-a000-4bc9-a674-32ff23141f69",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Cleaning Senior Center Client Data\n",
+    "---\n",
+    "### Importing FY 2020 Senior Center Client Data .csv file as dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fe370212-1ac6-401a-9464-b6bda8d5a104",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sccd_raw = pd.read_csv('raw_csv/senior_center_client_data_fy2020.csv')\n",
+    "\n",
+    "# Make a copy of the raw dataframe\n",
+    "sccd = sccd_raw.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "510545a1-c840-4ec6-8a73-85da12d3e562",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Cleaning the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a1fb96ea-24f8-43cd-b5fa-710d4268e32e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 0 duplicated rows in the sccd dataframe.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for duplicated rows\n",
+    "print(f'There are {sccd.duplicated().sum()} duplicated rows in the sccd dataframe.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "198ddc4e-aa1c-438e-99b6-ab4b37f83d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sccd dataframe currently has this shape: (69156, 12)\n",
+      "The sccd dataframe now has this shape: (69156, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The sccd dataframe currently has this shape: {sccd.shape}')\n",
+    "\n",
+    "# Merge columns from senior center provider dataset (i.e. left join sccd with scpd)\n",
+    "merge_cols = ['Senior Center Name', 'Site Type', 'Borough', 'Meal Prep Type', 'Meal Prep For Other Centers', 'Total Employees', 'Client to Staff Ratio', 'PTE Status']\n",
+    "sccd = sccd.merge(scpd[merge_cols], how = 'left', left_on = 'dftaid', right_on = scpd['DFTA ID'])\n",
+    "\n",
+    "print(f'The sccd dataframe now has this shape: {sccd.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "327bec94-6384-4474-a692-f86269b5cd8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['dftaid', 'provider_name', 'service_date', 'total_daily',\n",
+       "       'breakfast_units', 'lunch_units', 'dinner_units', 'tot_meals',\n",
+       "       'aib_tot', 'sce_tot', 'hpp_tot', 'tot_serv_pp', 'Senior Center Name',\n",
+       "       'Site Type', 'Borough', 'Meal Prep Type', 'Meal Prep For Other Centers',\n",
+       "       'Total Employees', 'Client to Staff Ratio', 'PTE Status'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sccd.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "fa7e1151-7349-470b-8599-c87b91d760c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The columns are now named:\n",
+      "Index(['DFTA ID', 'Service Date', 'Total Daily Services',\n",
+      "       'Total Breakfasts Served', 'Total Lunches Served',\n",
+      "       'Total Dinners Served', 'Total Meals Served', 'Total AIB Services',\n",
+      "       'Total SCE Services', 'Total HPP Services', 'Total Clients Served',\n",
+      "       'Senior Center Name', 'Site Type', 'Borough', 'Meal Prep Type',\n",
+      "       'Meal Prep For Other Centers', 'Total Employees',\n",
+      "       'Client to Staff Ratio', 'PTE Status'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rename columns to be more intuitive (based on data dictionary descriptions)\n",
+    "sccd.rename(columns = {\n",
+    "    'dftaid': 'DFTA ID',\n",
+    "    'service_date': 'Service Date',\n",
+    "    'total_daily': 'Total Daily Services',\n",
+    "    'breakfast_units': 'Total Breakfasts Served',\n",
+    "    'lunch_units': 'Total Lunches Served',\n",
+    "    'dinner_units': 'Total Dinners Served',\n",
+    "    'tot_meals': 'Total Meals Served',\n",
+    "    'aib_tot': 'Total AIB Services',\n",
+    "    'sce_tot': 'Total SCE Services',\n",
+    "    'hpp_tot': 'Total HPP Services',\n",
+    "    'tot_serv_pp': 'Total Clients Served',\n",
+    "    'Senior Center Name_x': 'Senior Center Name',\n",
+    "    'Site Type_x': 'Site Type', \n",
+    "    'Borough_x': 'Borough', \n",
+    "    'Meal Prep Type_x': 'Meal Prep Type',\n",
+    "    'Meal Prep For Other Centers_x': 'Meal Prep For Other Centers', \n",
+    "    'Total Employees_x': 'Total Employees',\n",
+    "    'Client to Staff Ratio_x': 'Client to Staff Ratio', \n",
+    "    'PTE Status_x': 'PTE Status', \n",
+    "    'Senior Center Name_y': 'Senior Center Name',\n",
+    "    'Site Type_y': 'Site Type', \n",
+    "    'Borough_y': 'Borough', \n",
+    "    'Meal Prep Type_y': 'Meal Prep Type',\n",
+    "    'Meal Prep For Other Centers_y': 'Meal Prep For Other Centers', \n",
+    "    'Total Employees_y': 'Total Employees',\n",
+    "    'Client to Staff Ratio_y': 'Client to Staff Ratio', \n",
+    "    'PTE Status_y': 'PTE Status'\n",
+    "}, inplace = True)\n",
+    "\n",
+    "# Drop the redundant provider_name column, since there is a merged Senior Center Name column now\n",
+    "sccd.drop(columns = 'provider_name', inplace = True)\n",
+    "    \n",
+    "print(f'The columns are now named:\\n{sccd.columns}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7606ea09-2763-42f1-92e2-b1e49452e2dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Senior Center Name              4982\n",
+       "Site Type                       4982\n",
+       "Borough                         4982\n",
+       "Meal Prep Type                  4982\n",
+       "Meal Prep For Other Centers     4982\n",
+       "Total Employees                 4982\n",
+       "Client to Staff Ratio          28250\n",
+       "PTE Status                      4982\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check which columns have NaNs, and count the total NaNs for that column\n",
+    "(sccd.isna().sum()).loc[(sccd.isna().sum()) > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ced01764-524e-4f98-a3d7-584bf710b65b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sccd dataframe now has this shape: (64174, 19)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop the rows that have NaNs in Senior Center Name (i.e. didn't have a match in scpd dataframe)\n",
+    "sccd.drop(index = sccd[sccd['Senior Center Name'].isna()].index, inplace = True)\n",
+    "\n",
+    "# Re-check which columns have NaNs, and count the total NaNs for that column\n",
+    "(sccd.isna().sum()).loc[(sccd.isna().sum()) > 0]\n",
+    "\n",
+    "print(f'The sccd dataframe now has this shape: {sccd.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "acd19aec-4cbb-4eb7-84ec-6bf3e6ece563",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cast the values in 'Service Date' to datetimes\n",
+    "sccd['Service Date'] = pd.to_datetime(sccd['Service Date'], format = '%m/%d/%Y')\n",
+    "\n",
+    "# Derive a column called 'Service Month' from the 'Service Date' column\n",
+    "sccd['Service Month'] = sccd['Service Date'].dt.strftime('%B %Y')\n",
+    "\n",
+    "# Derive a column called 'Service Month as Num' from the 'Service Date' column\n",
+    "sccd['Service Month as Num'] = sccd['Service Date'].dt.month\n",
+    "\n",
+    "# Derive a column called 'Fiscal Quarter' from the 'Service Month' column\n",
+    "def get_fiscal_quarter(month):\n",
+    "    if month in ['July 2019', 'August 2019', 'September 2019']:\n",
+    "        return 'Q1'\n",
+    "    elif month in ['October 2019', 'November 2019', 'December 2019']:\n",
+    "        return 'Q2'\n",
+    "    elif month in ['January 2020', 'February 2020', 'March 2020']:\n",
+    "        return 'Q3'\n",
+    "    elif month in ['April 2020', 'May 2020', 'June 2020']:\n",
+    "        return 'Q4'\n",
+    "    \n",
+    "sccd['Fiscal Quarter'] = sccd['Service Month'].apply(get_fiscal_quarter)"
+   ]
   }
  ],
  "metadata": {
