Derive additional column in cleaned sccd dataframe named Service Day of Week and edit senior_center_fy2020_data.py to include this additional column

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1532,11 +1532,16 @@
     "# Cast the values in 'Service Date' to datetimes\n",
     "sccd['Service Date'] = pd.to_datetime(sccd['Service Date'], format = '%m/%d/%Y')\n",
     "\n",
-    "# Derive a column called 'Service Month' from the 'Service Date' column\n",
+    "# Derive a columns called 'Service Month' and 'Service Month as Num' from the 'Service Date' column\n",
     "sccd['Service Month'] = sccd['Service Date'].dt.strftime('%B %Y')\n",
-    "\n",
-    "# Derive a column called 'Service Month as Num' from the 'Service Date' column\n",
     "sccd['Service Month as Num'] = sccd['Service Date'].dt.month\n",
+    "\n",
+    "# Derive a column called 'Service Day of Week' from the 'Service Date' column\n",
+    "# Assuming 'date_column' is your datetime column\n",
+    "sccd['Service Day of Week'] = sccd['Service Date'].dt.dayofweek\n",
+    "\n",
+    "day_names = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "sccd['Service Day of Week'] = sccd['Service Day of Week'].map(lambda day: day_names[day])\n",
     "\n",
     "# Derive a column called 'Fiscal Quarter' from the 'Service Month' column\n",
     "def get_fiscal_quarter(month):\n",
